# scene-it

./: Cargo.toml  README.md
data/: screenplay1.json
scene-it-backend/: Cargo.toml  tauri.conf.json
scene-it-desktop/: package-lock.json  package.json
scene-it-desktop/src/: App.tsx
scene-it-desktop/src-tauri/: Cargo.toml  tauri.conf.json
scene-it-desktop/src-tauri/src/: lib.rs  main.rs
scene-it-engine/: Cargo.toml
scene-it-engine/src/: utils.rs
scene-it-engine/src/models/: character.rs  metadata.rs  mod.rs  scene.rs  scene_graph.rs  storyboard.rs
scene-it-engine/src/models/scene_elements/: heading.rs
scene-it-ui/: index.html  package-lock.json  package.json
src/: lib.rs  utils.rs
src/models/: author.rs  character.rs  metadata.rs  mod.rs  scene.rs  scene_graph.rs  storyboard.rs  summary.rs  title.rs
src/models/scene_elements/: action.rs  dialogue.rs  heading.rs  mod.rs
